# capmonster_python

./: .editorconfig  .gitignore  .release-please-config.json  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  retype.yml  setup.py
.github/: CODEOWNERS  auto_assign.yml  blunderbuss.yml  dependabot.yml  release-please.yml
.github/ISSUE_TEMPLATE/: bug_report.md  help-wanted.md
.github/workflows/: ghpages.yml  publish.yml  pythonpackage.yml  (+2 more)
capmonster_python/: CapmonsterClient.py  FunCaptchaTask.py  FunCaptchaTaskProxyless.py  HCaptchaTask.py  HCaptchaTaskProxyless.py  ImageToTextTask.py  NoCaptchaTask.py  NoCaptchaTaskProxyless.py  RecaptchaV3TaskProxyless.py  __init__.py  aws_waf.py  capmonster.py  client.py  compleximage.py  datadome.py  exceptions.py  fun_captcha.py  gee_test.py  geetest.py  hcaptcha.py  image_to_text.py  methods.py  recaptcha_v2.py  recaptcha_v2_enterprise.py  recaptcha_v3.py  tendi.py  turnstile.py  utils.py
changelog/: index.html
docs/: 252f366e-9c11096f8c2dcea5e3ee.js  252f366e-9c11096f8c2dcea5e3ee.js.map  404.html  545f34e4-fbdf3371245ae9449b10.js  5e2a4920-2606368e26af31faa706.js  5e2a4920-2606368e26af31faa706.js.map  CNAME  a7629950cb7a18c7593baf47d0acfe798f1cddc4-1502ff1c49d17fc210ba.js  a7629950cb7a18c7593baf47d0acfe798f1cddc4-1502ff1c49d17fc210ba.js.map  app-e9c03bb6f3f68793b630.js  app-e9c03bb6f3f68793b630.js.map  changelog.md  chunk-map.json  component---cache-caches-gatsby-plugin-offline-app-shell-js-b2b17885f5c5bc69afba.js  component---cache-caches-gatsby-plugin-offline-app-shell-js-b2b17885f5c5bc69afba.js.map  component---node-modules-rocketseat-gatsby-theme-docs-core-src-templates-docs-query-js-020411900b3f6acc6a5f.js  component---node-modules-rocketseat-gatsby-theme-docs-core-src-templates-docs-query-js-020411900b3f6acc6a5f.js.map  component---node-modules-rocketseat-gatsby-theme-docs-core-src-templates-homepage-query-js-9e6a39cd5b4d4a1cdd2b.js  component---node-modules-rocketseat-gatsby-theme-docs-core-src-templates-homepage-query-js-9e6a39cd5b4d4a1cdd2b.js.map  component---src-pages-404-js-cb8f99d3aa675579e628.js  component---src-pages-404-js-cb8f99d3aa675579e628.js.map  documentation.md  error_codes.md  examples.md  f0e45107-d10b2e8596e93ea34333.js  f0e45107-d10b2e8596e93ea34333.js.map  framework-7841de737cb78b1de97b.js  framework-7841de737cb78b1de97b.js.map  gatsby-config.js  index.html  index.md  installation.md  manifest.webmanifest  package.json  polyfill-5910b445c1712afcdc07.js  polyfill-5910b445c1712afcdc07.js.map  sw.js  webpack-runtime-076ca0807145a3805411.js  webpack-runtime-076ca0807145a3805411.js.map  webpack.stats.json
error_codes/: index.html
examples/: funcaptcha_request.py  funcaptcha_selenium.py  hcaptcha_request.py  hcaptcha_selenium.py  imagetotext.py  index.html  recaptchav2_request.py  recaptchav2_selenium.py  requirements.txt  turnstile_request.py  turnstile_selenium.py
installation/: index.html
python_capmonster/: CapmonsterClient.py  FunCaptchaTask.py  FunCaptchaTaskProxyless.py  ImageToTextTask.py  NoCaptchaTask.py  NoCaptchaTaskProxyless.py  RecaptchaV3TaskProxyless.py  __init__.py  exceptions.py
scripts/: generate_changelog.py
tests/: altcha_test.py  amazon_test.py  basilisk_test.py  binance_test.py  castle_test.py  client_mock_test.py  client_test.py  complex_image_recaptcha_test.py  complex_image_recognition_test.py  datadome_test.py  funcaptcha_test.py  geetest_test.py  integration_test.py  mtcaptcha_test.py  recaptcha_v2_test.py  recaptcha_v3_enterprise_test.py  test_methods.py  test_tasks.py  tspd_test.py  turnstile_waiting_room_test.py  yidun_test.py
(+177 files in other folders)
