[project]
name = "capmonster_python"
description = "capmonster.cloud library for Python"
authors = [
    "Alperen Sert <mail@alperenn.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alperensert/capmonster_python"
repository = "https://github.com/alperensert/capmonster_python"
documentation = "https://github.com/alperensert/capmonster_python/wiki"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
