[project]
name = "capmonster_python"
version = "5.0.0"
description = "capmonster.cloud library/package for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alperen Sert", email = "business@alperen.io" }]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0"
]

keywords = [
    "capmonster",
    "capmonster-cloud",
    "captcha",
    "captcha-solver",
    "captcha-solving",
    "captcha-bypass",
    "recaptcha",
    "recaptcha-v2",
    "recaptcha-v3",
    "hcaptcha",
    "turnstile",
    "cloudflare",
    "funcaptcha",
    "geetest",
    "datadome",
    "image-captcha",
    "web-scraping",
    "async",
    "python",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://alperensert.github.io/capmonster_python/"
Source = "https://github.com/alperensert/capmonster_python/"
Tracker = "https://github.com/alperensert/capmonster_python/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
